Quaternion() returning "Quaternion((0.0, 0.0, 0.0, 0.0))" Instead of Quaternion((1.0, 0.0, 0.0, 0.0)) #55527

Closed
opened 2018-06-18 22:00:16 +02:00 by Andrey B · 5 comments

Win64, Blender 2.79 / 2.8

Type in python console:

Quaternion()

Result:
Quaternion((0.0, 0.0, 0.0, 0.0))

Correct result ( Identity quaternion (w value must be 1.0 ) :

Quaternion((1.0, 0.0, 0.0, 0.0))

Even docstring says:

Create an identity quaternion

git point of interest: https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/python/mathutils/mathutils_Quaternion.c#l1101

quat.PNG

Win64, Blender 2.79 / 2.8 Type in python console: ``` Quaternion() ``` **Result:** ```Quaternion((0.0, 0.0, 0.0, 0.0))``` **Correct result** ( *Identity quaternion* (**w** value must be 1.0 ) : > Quaternion((**1.0**, 0.0, 0.0, 0.0)) Even docstring says: ```(), *no args* ``` Create an identity quaternion ``` ``` git point of interest: https://git.blender.org/gitweb/gitweb.cgi/blender.git/blob/HEAD:/source/blender/python/mathutils/mathutils_Quaternion.c#l1101 ![quat.PNG](https://archive.blender.org/developer/F3735094/quat.PNG)
Author

Added subscriber: @befzz

Added subscriber: @befzz
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-06-19 10:02:11 +02:00
Member

Thanx for spotting this.
Made a differential in D3487

Thanx for spotting this. Made a differential in [D3487](https://archive.blender.org/developer/D3487)

This issue was referenced by blender/blender@96b4e43e8d

This issue was referenced by blender/blender@96b4e43e8dcdf3c051be2b52bb453c55d6afcd08
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#55527
No description provided.