Fix T55527: creating a Quaternion without args should result in identity quaternion

Reviewed By: campbellbarton

Differential Revision: https://developer.blender.org/D3487